# lightyear

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  vcpkg.json
LightYear/: CMakeLists.txt
Lightyear/: CMakeLists.txt
Lightyear/config/: Config.hpp  Config.hpp.in
Lightyear/includes/: Lightyear.h
Lightyear/includes/Lightyear/: LightyearCore.h
Lightyear/includes/Lightyear/Common/: Assertions.h  Base.h  Base.inl  Log.h  Macros.h  Math.h  Math.hpp
Lightyear/includes/Lightyear/Core/: Application.h  Assertions.h  Base.h  Entrypoint.h  Export.h  Filesystem.h  Layer.h  LayerStack.h  Log.h  Macros.h  SystemLayer.h  Timestep.h  Window.h
Lightyear/includes/Lightyear/Editor/: ImGUILayer.h  ImGuiLayer.h
Lightyear/includes/Lightyear/Events/: ApplicationEvent.h  EditorEvent.h  Event.h  EventTypes.h  KeyEvent.h  MouseEvent.h
Lightyear/includes/Lightyear/Helpers/: DynamicBitset.h  UUID.h  dynamic_bitset.h  uuid.h
Lightyear/includes/Lightyear/Helpers/SpatialPartitioning/: AABB.h  aabb.h  quadtree.h
Lightyear/includes/Lightyear/Input/: Input.h  KeyCodes.h  MouseCodes.h
Lightyear/includes/Lightyear/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLFramebuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture2D.h  OpenGLUniformBuffer.h  OpenGLVertexArray.h
Lightyear/includes/Lightyear/Platform/Windows/: WindowsWindow.h
Lightyear/includes/Lightyear/Renderer/: Mesh.h  Model.h  Shader.h
Lightyear/includes/Lightyear/Renderer/Abstract/: RenderCommand.h  Renderer.h  RendererAPI.h  RendererContext.h  RendererUBO.h
Lightyear/includes/Lightyear/Renderer/Camera/: Camera.h  OrthographicCamera.h  SceneCamera.h
Lightyear/includes/Lightyear/Renderer/ImGui/: ImGuiLayer.h
Lightyear/includes/Lightyear/Renderer/MaterialSystem/: Material.h  ShaderLibrary.h
Lightyear/includes/Lightyear/Renderer/Mesh/: Mesh.h
Lightyear/includes/Lightyear/Renderer/Primitives/: Buffer.h  Framebuffer.h  RenderTypes.h  Shader.h  Texture.h  UniformBuffer.h  VertexArray.h
Lightyear/includes/Lightyear/Scene/: Components.h  Entity.h  Scene.h  SceneContext.h  SceneData.h  SceneGraph.h  SceneManager.h  SceneRuntime.h  SceneSerializer.h
Lightyear/includes/Lightyear/Scene/Components/: ComponentRegistry.h  ComponentUtils.inl  Components.h  ComponentsForward.h  ComponentsReflect.inl
Lightyear/includes/Lightyear/Serialization/: Concepts.h  FileSerializer.h  ISerializable.h  SerializableContract.h  Serialization.h  SerializationAdapters.h  StreamReader.h  StreamWriter.h
Lightyear/includes/Lightyear/Settings/: EditorSettings.h  EngineSettings.h  ProjectSettings.h  SettingsManager.h
Lightyear/includes/Lightyear/Test/: Test.h
Lightyear/includes/Lightyear/World/: Level.h  World.h  WorldManager.h
Lightyear/includes/Lightyear/pch/: lypch.h
Lightyear/src/Common/: Log.cpp
Lightyear/src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Math.cpp
Lightyear/src/Editor/: ImGUILayer.cpp
Lightyear/src/Helpers/: DynamicBitset.cpp  UUID.cpp  dynamic_bitset.cpp  uuid.cpp
Lightyear/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture2D.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp
Lightyear/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Lightyear/src/Renderer/: Mesh.cpp  Shader.cpp
Lightyear/src/Renderer/Abstract/: RenderCommand.cpp  Renderer.cpp  RendererAPI.cpp  RendererContext.cpp
Lightyear/src/Renderer/Camera/: OrthographicCamera.cpp  SceneCamera.cpp
Lightyear/src/Renderer/ImGui/: ImGuiLayer.cpp
Lightyear/src/Renderer/MaterialSystem/: Material.cpp  ShaderLibrary.cpp
Lightyear/src/Renderer/Primitives/: Buffer.cpp  Framebuffer.cpp  Shader.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp
Lightyear/src/Scene/: Entity.cpp  Scene.cpp  SceneContext.cpp  SceneGraph.cpp  SceneManager.cpp  SceneRuntime.cpp  SceneSerializer.cpp
Lightyear/src/Scene/Core/: Entity.cpp  Scene.cpp  SceneRuntime.cpp
Lightyear/src/Serialization/: FileSerializer.cpp
Lightyear/src/Serialization/Binary/: BinaryFileSerialization.cpp
Lightyear/src/Serialization/Text/: YamlTextSerialization.cpp
Lightyear/src/Settings/: SettingsManager.cpp
Lightyear/src/Test/: Test.cpp
Lightyear/src/Utils/: TextureLoader.cpp
Lightyear/src/World/: Level.cpp
Sandbox/: CMakeLists.txt  README.md  Sandbox.cpp
Sandbox/assets/Shaders/Fragment/: S_Default.frag  S_Grid.frag  default.frag  default2.frag
Sandbox/assets/Shaders/Vertex/: S_Default.vert  S_Grid.vert  default.vert  default2.vert
Sandbox/includes/Sandbox/: SandboxApp.h
Sandbox/includes/Sandbox/Core/: ExampleLayer.h  SandboxApp.h
Sandbox/includes/Sandbox/Editor/: EditorLayer.h
Sandbox/includes/Sandbox/Extras/: ExampleLayer.h
Sandbox/includes/Sandbox/Geometry/: Geometry.h
Sandbox/includes/Sandbox/Helpers/: GridRender.h
Sandbox/includes/Sandbox/Layers/: ExampleLayer.h
Sandbox/src/: SanboxApp.cpp
Sandbox/src/Core/: SanboxApp.cpp
Sandbox/src/Core/Camera/: EditorCamera.cpp
Sandbox/src/Editor/: EditorLayer.cpp
Sandbox/src/Editor/Panel/: ConsolePanel.cpp  EEntityDetailsPanel.cpp  ESceneGraphPanel.cpp  EViewportPanel.cpp  SceneGraphPanel.cpp  SceneGraphPanelExp.cpp  SceneViewportPanel.cpp
Sandbox/src/Editor/Widgets/: SceneWidget.cpp
Sandbox/src/Editor/Workspace/: ESceneWorkspace.cpp
Sandbox/src/Extras/: ExampleLayer.cpp
Sandbox/src/Geometry/: Geometry.cpp
Sandbox/src/Helpers/: GridRender.cpp
Sandbox/src/Layers/: ExampleLayer.cpp
engine/common/: CMakeLists.txt
engine/common/include/common/: Asserts.h  Macros.h  Visibility.h
engine/infra/: CMakeLists.txt
engine/infra/logging/src/: Log.cpp
engine/renderer/backend/vulkan/: CMakeLists.txt
examples/: CMakeLists.txt
examples/logging/: CMakeLists.txt  ExampleBasic.cpp
examples/renderer/: CMakeLists.txt  ExampleRendererTest.cpp  ExampleSimple.cpp  LogScope.hpp  Window.hpp
examples/renderer/assets/: Shader.spv  default.slang
examples/renderer/support/: LogScope.hpp  SampleVertices.hpp  Window.hpp
(+161 files in other folders)
